<resources>
    <string name="app_name">The Broker</string>
    <string name="key_google_maps" templateMergeStrategy="preserve" translatable="false">AIzaSyCHZfZzOzUyd47AAqW4FBeM4wa4KcZEI-A</string>
    <string name="internal_storage" translatable="false">Internal storage</string>
    <string name="google_play_services_not_available" translatable="false">Google play services is not avilable</string>
    <string name="client_phone_number" translatable="false">%1$s%2$s</string>
    <string name="english" translatable="false">English</string>
    <string name="zero" translatable="false">0</string>
    <string name="arabic" translatable="false">عربي</string>
    <string name="iban" translatable="false">IBAN</string>
    <string name="empty" translatable="false">&#8230;</string>
    <string name="space" translatable="false">%1$s %2$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">Skip</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember">Remember</string>
    <string name="password_forget">Forget Password ?</string>
    <string name="create_new_account">Create New Account</string>
    <string name="creating_new_account">creating new account&#8230;</string>
    <string name="location_access_denied">Location Access Denied</string>
    <string name="sale">Sale</string>
    <string name="rent">Rent</string>
    <string name="auctions">Auctions</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="messages">Messages</string>
    <string name="notifications">Notifications</string>
    <string name="favorites">Favorites</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="settings">Settings</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Log out</string>
    <string name="real_estate_holder">Real Estate Holder</string>
    <string name="search_advanced">Adavnced Search</string>
    <string name="real_estate_age">Real Estate Age</string>
    <string name="price">Price</string>
    <string name="sar">SAR</string>
    <string name="area">Area</string>
    <string name="meter">Meter</string>
    <string name="save">Save</string>
    <string name="saved">Saved</string>
    <string name="real_estate_status">Status</string>
    <string name="real_estate_category">Category</string>
    <string name="region">Region</string>
    <string name="district">District</string>
    <string name="price_amount">%1$s SAR</string>
    <string name="value_area">%1$s Meter</string>
    <string name="for_sale">For Sale</string>
    <string name="for_rent">For Rent</string>
    <string name="by_aeqarat">By Aeqarat</string>
    <string name="no_bids_yet">No Bids Yet</string>
    <string name="not_defined">Not Defined</string>
    <string name="auction_expiration_date">Expiration Date</string>
    <string name="join">Join</string>
    <string name="description">Description</string>
    <string name="details">Details</string>
    <string name="reviews">Reviews</string>
    <string name="no_sharable_link">No Sharable Link</string>
    <string name="request_ownership">Ownership Request</string>
    <string name="request_rent">Rent Request</string>
    <string name="owner_contact">Contact Owner</string>
    <string name="report">Report</string>
    <string name="title_report">Report Title</string>
    <string name="title">Title</string>
    <string name="your_message">Your Message</string>
    <string name="send">Send</string>
    <string name="enter_message">Enter Message</string>
    <string name="choose_status">Choose Status &#8211;&#8211;</string>
    <string name="choose_status_first">Choose Status</string>
    <string name="id">Id</string>
    <string name="number_ad">Ad Number</string>
    <string name="in_meter">(Meter)</string>
    <string name="rooms">Rooms</string>
    <string name="insurance">Insurance</string>
    <string name="in_sar">(SAR)</string>
    <string name="apartments">Apartments</string>
    <string name="electricity_acct">Electricity Account</string>
    <string name="shared_acct">Shared</string>
    <string name="water_acct">Water Account</string>
    <string name="private_acct">Private</string>
    <string name="floors">Floors</string>
    <string name="bathrooms">Bathrooms</string>
    <string name="message">Message</string>
    <string name="amount">Amount</string>
    <string name="date_start">Start Date</string>
    <string name="payment">Payment</string>
    <string name="date_select">Select Date</string>
    <string name="cash">Cash</string>
    <string name="visa">Visa</string>
    <string name="bank_account">Bank Account</string>
    <string name="enter_start_date">Enter Start Date</string>
    <string name="pending">Pending</string>
    <string name="request_date">Request Date</string>
    <string name="amount_insurance">Insurance Amount</string>
    <string name="method_payment">Payment Method</string>
    <string name="real_estate_documents">Real Estate Documents</string>
    <string name="request_modify">Modify Request</string>
    <string name="ownership_contract">Ownership Contract</string>
    <string name="negotiation">Negotiation</string>
    <string name="negotiated">Negotiated</string>
    <string name="duration">Duration</string>
    <string name="other">Other</string>
    <string name="type_here">Type here...</string>
    <string name="cancel">Cancel</string>
    <string name="three_months">3 months</string>
    <string name="six_months">6 months</string>
    <string name="twelve_months">12 months</string>
    <string name="sar_per_month">sar/month</string>
    <string name="max_bid">Max Bid %1$s sar</string>
    <string name="auction_details">Auction Details</string>
    <string name="your_bid">Your Bid</string>
    <string name="edit">Edit</string>
    <string name="bids">Bids</string>
    <string name="bids_number">%1$s bids</string>
    <string name="months">%1$s months</string>
    <string name="one_month">%1$s month</string>
    <string name="invalid_bid">Invalid Bid</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="property_rights">Property Rights</string>
    <string name="confirm">Confirm</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_code">Enter Code</string>
    <string name="invalid_code">Invalid Code</string>
    <string name="username">username</string>
    <string name="phone_number">Phone Number</string>
    <string name="create">Create</string>
    <string name="permission_denied">Taking photos not allowed</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_password">Enter Password</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="pick_photo">Pick Photo</string>
    <string name="password_reset">Reset Password</string>
    <string name="password_new">New Password</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="password_not_match">Passwords don\'t match</string>
    <string name="contact_us_title">Contact Us to know more about details and services</string>
    <string name="enter_title">Enter Title</string>
    <string name="real_estates_owned">My Real Estates</string>
    <string name="requests">Requests</string>
    <string name="admin">Administrator</string>
    <string name="supervisor">Supervisor</string>
    <string name="agent">Agent</string>
    <string name="individual_owner">Individual Owner</string>
    <string name="user">User</string>
    <string name="accounting">Accounting</string>
    <string name="real_estates">Real Estates</string>
    <string name="info_rent">Rent Info</string>
    <string name="info_sale">Sale Info</string>
    <string name="contract_copy">Contract Copy</string>
    <string name="no_info">No Info</string>
    <string name="no_real_estates">No Real Estates ...</string>
    <string name="details_accounting">Accounting Details</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="income">Income</string>
    <string name="expenses">Expenses</string>
    <string name="profit">Profit</string>
    <string name="rented_real_estates">Rented Real Estates</string>
    <string name="profile">Profile</string>
    <string name="documents">Documents</string>
    <string name="info">Info</string>
    <string name="payment_methods">Payment</string>
    <string name="date_birth">Birth Date</string>
    <string name="address">Address</string>
    <string name="postal_code">Postal code</string>
    <string name="password_change">Change Password</string>
    <string name="password_incorrect">Incorrect Password</string>
    <string name="add_new_document">Add New Document</string>
    <string name="no_documents">No Documents...</string>
    <string name="add_new_card">Add New Card</string>
    <string name="card_number">Card Number</string>
    <string name="card_type">Card Type</string>
    <string name="date_expiration">Expiration Date</string>
    <string name="cvv">cvv</string>
    <string name="country">Country</string>
    <string name="add">Add</string>
    <string name="no_cards">No Cards...</string>
    <string name="website_notifications">Website Notifications</string>
    <string name="website_notifications_description">Enable notifications of real estates, services and offers related to website</string>
    <string name="settings_advanced">Advanced</string>
    <string name="status_and_cards_notifications">Account Status Notifications and Payment Cards</string>
    <string name="status_and_cards_notifications_description">Enable Notifications related to accounting and my real estates</string>
    <string name="send_notifications_to_email">Send Notifications to Email</string>
    <string name="app">App</string>
    <string name="language">Language</string>
    <string name="no_reviews">No Reviews...</string>
    <string name="offices">Offices</string>
    <string name="shops">Shops</string>
    <string name="halls">Halls</string>
    <string name="street_width">Street Width</string>
    <string name="choose_category">Choose Category &#8211;&#8211;</string>
    <string name="choose_region">Choose Region &#8211;&#8211;</string>
    <string name="choose_district">Choose District &#8211;&#8211;</string>
    <string name="no_filter">No Filter</string>
    <string name="no_messages">No Messages...</string>
    <string name="no_notifications">No Notifications...</string>
    <string name="month">month</string>
    <string name="file_saved_in_downloads">File saved in downloads</string>
    <string name="download_failed">Download failed</string>
    <string name="show_your_request">Show your request</string>
    <string name="no_requests">No Requests...</string>
    <string name="not_saved">Not saved</string>
    <string name="auction_join">Auction Join</string>
    <string name="warning">Warning</string>
    <string name="debenture">Debenture</string>
    <string name="default_date">07/07/1993</string>
    <string name="default_value">4000 sar</string>
    <string name="debenture_type">Debenture Type</string>
    <string name="date_collect">Collect Date</string>
    <string name="value_debenture">Debenture Value</string>
    <string name="show">Show</string>
    <string name="download">Download</string>
    <string name="default_name">Mu Abolmaaty</string>
    <string name="default_type">Real estate holder</string>
    <string name="account">Account</string>
</resources>